Version 2023.xx
- Implemented: Alfen Eve Charger
- Implemented: Device reordering for Users with devices
- Implemented: LUA: Added name state to devicechanged_ext table
- Implemented: RFXCom, Updated SDK
- Implemented: RTL433, Added support for volume_m3 meter
- Implemented: MQTT-AD, added support for number (config) types
- Implemented: P1 Meter, added Actual Usage/Delivery (total of L1 + L2 + L3)
- Implemented: P1 Meter, Added calculated kWh devices per phase for usage and delivery
- Implemented: -nocache command line option (ask browser not to cache pages)
- Implemented: Users with admin rights and selected devices will now see only those devices
- Implemented: Users devices editor, option to remove all nodes/devices
- Implemented: Visual Crossing (replacement for Darksky/Forecast)
- Fixed: Blinds percentage timers
- Fixed: Chime structure check
- Fixed: Counter day charts, better hourly bars and usage
- Fixed: Device reordering when a room plan was selected
- Fixed: Forecast button now displays a working forecast
- Fixed: Install and update fixed for Raspberry Pi 4 with 32bit (armhf) userland
- Fixed: Settings/Floorplan, Scene Names value was not saved
- Changed: MQTT-AD, better Unit calculation for scene/action devices
- Removed: native GoodWe hardware (use the new GoodWe python plugin instead)

Version 2023.1 (February 14 2023)
- For a full overview visit: https://www.domoticz.com/wiki/Domoticz_versions_-_Commits for details
- Implemented: Accept JWT tokens as authentication and Authorization Bearer tokens (either from internal or external IAM service)
- Implemented: Blinds, added option to schedule 0%
- Implemented: dzVents, OpenURL PATCH method
- Implemented: Enphase, redesign and added battery readings (Supports firmware V7)
- Implemented: Internal OAuth2/OIDC IAM service supporting 4 different flows (OAuth2 (RFC6749), PKCE extension (RFC7636) and JWT Tokens (RFC7519))
- Implemented: MQTT, added support for Lock status