@@ -1325,6 +1325,34 @@
 			</tr>
 		</table>
 	</div>
+	<div id="divenever">
+		<br>
+		<table class="display" id="hardwareparamsenever" border="0" cellpadding="0" cellspacing="20">
+			<tr>
+				<td align="right" style="width:140px"><label><span data-i18n="Access token">Access token</span>:</label></td>
+				<td><input type="text" id="AccessToken" style="width: 300px; padding: .2em;" class="text ui-widget-content ui-corner-all"></td>
+			</tr>
+			<tr>
+				<td align="right" <label><span data-i18n="Provider"></span>:</label></td>
+				<td>
+					<select id="provider" name="provider" style="width:200px" class="combobox ui-corner-all">
+						<option value="AIP">All in power</option>
+						<option value="ANWB" selected="selected">ANWB Energie</option>
+						<option value="EE">EasyEnergy</option>
+						<option value="EZ">Energy Zero</option>
+						<option value="FR">Frank Energie</option>
+						<option value="GSL">Groenestroom Lokaal</option>
+						<option value="MDE">Mijndomein Energie</option>
+						<option value="NE">NextEnergy</option>
+						<option value="TI">Tibber</option>
+						<option value="VON">Vrij op naam</option>
+						<option value="ZG">ZonderGas</option>
+						<option value="ZP">Zonneplan</option>
+					</select>
+				</td>
+			</tr>
+		</table>
+	</div>
 	<div id="divhoneywell">
 		<br>
 		<table class="display" id="hardwareparamshoneywell" border="0" cellpadding="0" cellspacing="20">
