@@ -2591,6 +2591,35 @@ define(['app'], function (app) {
 					}
 				});
 			}
+			else if (text.indexOf("Enever") >= 0) {
+				var access_token = $("#hardwarecontent #divenever #AccessToken").val();
+				var provider = $("#hardwarecontent #divenever #provider").find("option:selected").text()
+				if (access_token == "") {
+					ShowNotify($.t('Please enter an Access Token!'), 2500, true);
+					return;
+				}
+				if (provider == "") {
+					ShowNotify($.t('Please enter an Provider!'), 2500, true);
+					return;
+				}
+				$.ajax({
+					url: "json.htm?type=command&param=addhardware&htype=" + hardwaretype +
+					"&loglevel=" + logLevel +
+					"&name=" + encodeURIComponent(name) +
+					"&username=" + encodeURIComponent(access_token) +
+					"&extra=" + encodeURIComponent(provider) +
+					"&enabled=" + bEnabled +
+					"&datatimeout=" + datatimeout,
+					async: false,
+					dataType: 'json',
+					success: function (data) {
+						RefreshHardwareTable();
+					},
+					error: function () {
+						ShowNotify($.t('Problem adding hardware!'), 2500, true);
+					}
+				});
+			}
 			else if (text.indexOf("Honeywell") >= 0) {
 				var apiKey = $("#hardwarecontent #divhoneywell #hwApiKey").val();
 				var apiSecret = $("#hardwarecontent #divhoneywell #hwApiSecret").val();
@@ -4622,6 +4651,7 @@ define(['app'], function (app) {
 			$("#hardwarecontent #divphilipshue").hide();
 			$("#hardwarecontent #divwinddelen").hide();
 			$("#hardwarecontent #divenphase").hide();
+			$("#hardwarecontent #divenever").hide();
 			$("#hardwarecontent #divhoneywell").hide();
 			$("#hardwarecontent #divmqtt").hide();
 			$("#hardwarecontent #divmysensorsmqtt").hide();
@@ -4945,6 +4975,9 @@ define(['app'], function (app) {
 			}
 			if (text.indexOf("MySensors Gateway with MQTT") >= 0) {
 				$("#hardwarecontent #divmysensorsmqtt").show();
+			}
+			else if (text.indexOf("Enever") >= 0) {
+				$("#hardwarecontent #divenever").show();
 			}
 			else if (text.indexOf("MQTT") >= 0) {
 			    $("#hardwarecontent #divmqtt").show();
